# onboarding_device_plugin

./: README.md  pyproject.toml
development/: Dockerfile  base_configuration.py  docker-compose.yml
onboarding_device_plugin/: README.md  __init__.py  admin.py  choices.py  exceptions.py  forms.py  forms.py.save  helpers.py  metrics.py  models.py  navigation.py  netbox_keeper.py  netdev_keeper.py  onboard.py  tables.py  tasks.py  template_content.py  urls.py  views.py
onboarding_device_plugin/migrations/: 0001_initial.py
onboarding_device_plugin/onboarding/: __init__.py  onboarding.py
onboarding_device_plugin/onboarding_device_plugin/: __init__.py  filters.py  models.py  template_content.py  worker.py
onboarding_device_plugin/onboarding_device_plugin/templates/onboarding_device_plugin/: onboarding_tasks_list.html  onboardingtask.html
onboarding_device_plugin/onboarding_extensions/: __init__.py  ios.py
onboarding_device_plugin/templates/onboarding_device_plugin/: device_onboarding_table.html  onboarding_task_edit.html  onboarding_tasks_list.html  onboarding_tasks_list.html.save  onboardingtask.html  onboardingtask_ge210.html  onboardingtask_lt210.html
onboarding_device_plugin/utils/: credentials.py
