[tool.poetry]
name = "onboarding_device_plugin"
version = "0.1.0"
description = "NetBox Plugins - onboarding device"
authors = ["Aslanov"]
packages = [
    { include = "onboarding_device_plugin" },
]

[tool.poetry.dependencies]
python = "^3.8"
junos-eznc = "2.6.3"
napalm = "^3.4.1"
zipp = "^3.8.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^22.6.0"
invoke = "^1.7.1"
pylint = "^2.14.4"
pylint-django = "^2.5.3"
pydocstyle = "^6.1.1"
yamllint = "^1.26.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
